# wayland-rs-wasm

./: Cargo.toml
wayland-backend/: Cargo.toml
wayland-backend/src/: client_api.rs  core_interfaces.rs  lib.rs  protocol.rs
wayland-backend/src/rs/: mod.rs
wayland-backend/src/rs/client_impl/: mod.rs
wayland-backend/src/types/: client.rs
wayland-client/examples/: simple_window.rs
wayland-client/src/: conn.rs  lib.rs
wayland-protocols/: Cargo.toml
wayland-protocols/src/: lib.rs  protocol_macro.rs  xdg.rs
wayland-scanner/src/: interfaces.rs  lib.rs
wayland-tests/: Cargo.toml
