[package]
name = "wayland-tests"
version = "0.1.0"
edition = "2018"
publish = false
autotests = false

[dependencies]

[dev-dependencies]
wayland-backend = { path = "../wayland-backend" }
wayland-client = { path = "../wayland-client" }
wayland-protocols = { path = "../wayland-protocols", features = ["client"] }
tempfile = "3"

[[test]]
name = "attach_to_surface"

[[test]]
name = "client_bad_requests"

[[test]]
name = "client_connect_to_env"
harness = false

[[test]]
name = "client_connect_to_socket"
harness = false

[[test]]
name = "client_dispatch"

[[test]]
name = "client_globals_helpers"

[[test]]
name = "client_proxies"

[[test]]
name = "destructors"

[[test]]
name = "globals"

[[test]]
name = "protocol_errors"

[[test]]
name = "send_sync"

[[test]]
name = "server_clients"

[[test]]
name = "server_created_object"

[[test]]
name = "server_global_filter"

[[test]]
name = "server_resources"

[[test]]
name = "xdg_shell_ping"
